ahora el icono del carrito aparece en el header tambien cuando estoy en la pagina cart y el boton de checkout ya redirige a checkout

--- a/cart.html
+++ b/cart.html
@@ -211,7 +211,7 @@
          <li>Total<span class="cart-total">$78</span></li>
                                 </ul>
                             </div>
-							<a class="theme-btn" href="#">CheckOut</a>
+							<a class="theme-btn" href="checkout.html">CheckOut</a>
                         </div>
                     </div>				
 				</div>
