--- a/checkout.html
+++ b/checkout.html
@@ -107,7 +107,7 @@
 							</a>
 						</div>
 						<div class="header__area-menubar-right-box-btn">
-							<a href="contact.html" class="theme-border-btn">Get A Quote<i class="far fa-angle-double-right"></i></a>
+							<a href="login.php" class="theme-border-btn">Login<i class="far fa-angle-double-right"></i></a>
 						</div>
 					</div>
 				</div>
