--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 								</a>
 							</div>
 							<div class="header__area-menubar-right-box-btn">
-								<a href="contact.html" class="theme-banner-btn">Booking Now<i class="far fa-angle-double-right"></i></a>
+								<a href="login.php" class="theme-banner-btn">Login<i class="far fa-angle-double-right"></i></a>
 							</div>
 						</div>
 					</div>
