ahora ya funciona el checkout pero falta agregarle algunos campos

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 								</li>
 								<li class="menu-item-has-children"><a href="#">Shop</a>
 									<ul class="sub-menu">
-										<li><a href="product-page.html">Product Page</a></li>
-										<li><a href="product-details.html">Product Details</a></li>
-										<li><a href="cart.html">Cart</a></li>
-										<li><a href="checkout.html">Checkout</a></li>
+										<li><a href="product-page.php">Product Page</a></li>
+										<li><a href="product-details.php">Product Details</a></li>
+										<li><a href="cart.php">Cart</a></li>
+										<li><a href="checkout.php">Checkout</a></li>
 									</ul>
 								</li>
 								<li class="menu-item-has-children"><a href="#">Blog</a>
