ahora he creado el manejador de articulos del blog

--- a/barbex/index.html
+++ b/barbex/index.html
@@ -90,9 +90,9 @@
 								<?php endif; ?>
 								<li class="menu-item-has-children"><a href="#">Blog</a>
 									<ul class="sub-menu">
-										<li><a href="blog-grid.html">Blog Grid</a></li>
-										<li><a href="blog-standard.html">Blog Standard</a></li>
-										<li><a href="blog-details.html">Blog Details</a></li>
+										<li><a href="blog-grid.php">Blog Grid</a></li>
+										<li><a href="blog-standard.php">Blog Standard</a></li>
+										<li><a href="blog-details.php">Blog Details</a></li>
 									</ul>
 								</li>
 								<li><a href="contact.html">Contact</a></li>
@@ -695,7 +695,7 @@
 				<div class="col-xl-4 col-lg-6 col-md-6 xl-mb-30">
 					<div class="blog__area-item">
 						<div class="blog__area-item-image">
-							<a href="blog-details.html"><img src="assets/img/blog/blog-1.jpg" alt=""></a>
+							<a href="blog-details.php"><img src="assets/img/blog/blog-1.jpg" alt=""></a>
 						</div>
 						<div class="blog__area-item-content">
 							<div class="blog__area-item-content-meta">
@@ -704,15 +704,15 @@
 									<li><a href="#"><i class="fal fa-calendar-alt"></i>30 June, 2022</a></li>
 								</ul>
 							</div>
-							<h4><a href="blog-details.html">We are a Haircut Salon Based in South Melbourne</a></h4>
-							<a href="blog-details.html" class="simple-btn">Read More<i class="far fa-angle-double-right"></i></a>	
+							<h4><a href="blog-details.php">We are a Haircut Salon Based in South Melbourne</a></h4>
+							<a href="blog-details.php" class="simple-btn">Read More<i class="far fa-angle-double-right"></i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-xl-4 col-lg-6 col-md-6 md-mb-30">
 					<div class="blog__area-item">
 						<div class="blog__area-item-image">
-							<a href="blog-details.html"><img src="assets/img/blog/blog-2.jpg" alt=""></a>
+							<a href="blog-details.php"><img src="assets/img/blog/blog-2.jpg" alt=""></a>
 						</div>
 						<div class="blog__area-item-content">
 							<div class="blog__area-item-content-meta">
@@ -721,15 +721,15 @@
 									<li><a href="#"><i class="fal fa-calendar-alt"></i>25 June, 2022</a></li>
 								</ul>
 							</div>
-							<h4><a href="blog-details.html">Online booking appoitment For Salon, Hair Salon</a></h4>
-							<a href="blog-details.html" class="simple-btn">Read More<i class="far fa-angle-double-right"></i></a>	
+							<h4><a href="blog-details.php">Online booking appoitment For Salon, Hair Salon</a></h4>
+							<a href="blog-details.php" class="simple-btn">Read More<i class="far fa-angle-double-right"></i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-xl-4 col-lg-6 col-md-6">
 					<div class="blog__area-item">
 						<div class="blog__area-item-image">
-							<a href="blog-details.html"><img src="assets/img/blog/blog-3.jpg" alt=""></a>
+							<a href="blog-details.php"><img src="assets/img/blog/blog-3.jpg" alt=""></a>
 						</div>
 						<div class="blog__area-item-content">
 							<div class="blog__area-item-content-meta">
@@ -738,8 +738,8 @@
 									<li><a href="#"><i class="fal fa-calendar-alt"></i>21 June, 2022</a></li>
 								</ul>
 							</div>
-							<h4><a href="blog-details.html">Customising your shave is Fun and easy</a></h4>
-							<a href="blog-details.html" class="simple-btn">Read More<i class="far fa-angle-double-right"></i></a>	
+							<h4><a href="blog-details.php">Customising your shave is Fun and easy</a></h4>
+							<a href="blog-details.php" class="simple-btn">Read More<i class="far fa-angle-double-right"></i></a>
 						</div>
 					</div>
 				</div>
